Create the calculator buttons

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
     >
       Reset Cart
     </button>
+    <button
+      onclick="
+    cart-=2;
+    console.log(`Cart quantity: ${cart}`)"
+    >
+      Remove from Cart
+    </button>
 
     <script>
       let cart = 0;
